--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </head>
 <body>
   <header>
-    <h1>Research Paper Portal</h1>
+    <h1>DeepSeaNet Project Portal</h1>
   </header>
 
   <!-- Switch button for mode toggle -->
