--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
   <div class="container">
     <div class="image-section">
-      <img src="placeholder_image.jpg" alt="Research Image">
+      <img src="https://raw.githubusercontent.com/s4nyam/deepseanetportal/main/asset_files/arch.png" alt="architecture image">
     </div>
 
     <div class="results-section">
