--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
 
     <div class="results-section">
-      <h2>Results</h2>
+      <h2>Abstract</h2>
       <!-- Add your research results here -->
       <p>This section contains the research results.</p>
     </div>
